refactor(router): POST /order 하위 클래스 리팩토링
- 클래스 이름 수정, 인터페이스 추가
- 요청 인터페이스 수정 -> 검증 스키마 수정
- API 문서 추가
