# routes/order.ts
@@ -3,40 +3,21 @@ import express from "express";
 import multer from "multer";
 import { orderController } from "../controllers";
 import { validate } from "../validator";
-import { getOrderSchema, patchOrderSchema, postOrderSchema } from "../validator/schema/routes/order";
 import {
   getOrderImageCompleteSchema,
   postOrderImageCompleteSchema,
 } from "../validator/schema/routes/order/image/complete";
 import { getOrderImageFailSchema, postOrderImageFailSchema } from "../validator/schema/routes/order/image/fail";
+import {
+  getOrderSchema,
+  patchOrderSchema,
+  postOrderSchema,
+} from "../validator/schema/routes/order/order-controller-request-data";
 
 const storage = multer.memoryStorage();
 const upload = multer({ storage: storage });
 
 const router = express.Router();
-
-// GET /order
-
-// query {
-//   orderId: number
-// }
-
-// Response
-
-// code: 200,
-// message: "OK",
-// body: {
-//   id: number,
-//   Destination: {
-//     X: number,
-//     Y: number
-//   },
-//   Departure: {
-//     X: number,
-//     Y: number
-//   }
-// }
-router.get("/", validate(getOrderSchema, ["query"]), orderController.order);
 
 // POST /order
 
@@ -89,9 +70,9 @@ router.get("/", validate(getOrderSchema, ["query"]), orderController.order);
 
 // code: 200,
 // message: "OK"
-router.post("/", validate(postOrderSchema, ["body"]), orderController.request);
+router.post("/", validate(postOrderSchema, ["body"]), orderController.createOrder);
 
-// PATCH /order
+// PATCH /order -> /order/deliver
 
 // body {
 //   userWalletAddress: string
@@ -104,7 +85,32 @@ router.post("/", validate(postOrderSchema, ["body"]), orderController.request);
 // message: "OK"
 router.patch("/", validate(patchOrderSchema, ["body"]), orderController.updateOrder);
 
-// GET /order/image/fail
+// GET /order -> /order/coordinates
+
+// query {
+//   orderId: number
+// }
+
+// Response
+
+// code: 200,
+// message: "OK",
+// body: {
+//   id: number,
+//   destination: {
+//     x: number,
+//     y: number
+//   },
+//   departure: {
+//     x: number,
+//     y: number
+//   }
+// }
+router.get("/coordinates", validate(getOrderSchema, ["query"]), orderController.getCoordinates);
+
+// 배송이미지
+
+// GET /order/image/fail -> /order/fail-image
 
 // query {
 //   orderId: "3" // string
@@ -121,7 +127,7 @@ router.patch("/", validate(patchOrderSchema, ["body"]), orderController.updateOr
 // }
 router.get("/image/fail", validate(getOrderImageFailSchema, ["query"]), orderController.getFailImage);
 
-// POST /order/image/fail
+// POST /order/image/fail -> /order/fail-image
 
 // body {
 //   orderNum: "3" // string
@@ -138,7 +144,7 @@ router.post(
   orderController.postFailImage,
 );
 
-// GET /order/image/complete
+// GET /order/image/complete -> /order/complete-image
 
 // query {
 //   orderId: "3" // string
@@ -154,7 +160,7 @@ router.post(
 // }
 router.get("/image/complete", validate(getOrderImageCompleteSchema, ["query"]), orderController.getImage);
 
-// POST /order/image/complete
+// POST /order/image/complete -> /order/complete-image
 
 // body {
 //   orderNum: number
